<resources>
    <string name="app_name">FireNance</string>
    <string name="note">Note</string>
    <string name="amount">Amount</string>
    <string name="add">Add</string>
    <string name="note_label">Note:</string>
    <string name="firenance">FireNance</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="done">Done</string>
    <string name="logout">Logout</string>

    <string name="currency">฿</string>
    <string name="invalid_amount">Invalid amount</string>
</resources>
